переверстка главного блока

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,6 @@
       <div class="hero-text">
         <h1 class="hero-text__title">Делаем ремонт квартир, домов и офисов по дизайн-проекту</h1>
         <span class="hero-text__subtitle">В Москве и Московской области</span>
-        <div class="main">
           <ul class="hero-list">
             <li class="hero-list__item">
               <div class="hero-list__image">
@@ -61,10 +60,44 @@
               <div class="hero-list__text">Сделали ремонт в 300 объектах</div>
             </li>
           </ul>
-          <div class="hero-image">
-            <img src="img/hero/hero-image.png" class="hero-image__img" alt="">
-          </div>
-        </div>
+        <button class="button hero-list__button">Рассчитать стоимость</button> 
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- <section class="hero">
+  <div class="container">
+    <div class="hero-block">
+      <div class="hero-text">
+        <h1 class="hero-text__title">Делаем ремонт квартир, домов и офисов по дизайн-проекту</h1>
+        <span class="hero-text__subtitle">В Москве и Московской области</span>
+          <ul class="hero-list">
+            <li class="hero-list__item">
+              <div class="hero-list__image">
+                <img src="img/hero/platen.svg" alt="">
+              </div>
+              <div class="hero-list__text">Цены <br> от 3 000 руб/м</div>
+            </li>
+            <li class="hero-list__item">
+              <div class="hero-list__image">
+                <img src="img/hero/tapepline.svg" alt="">
+              </div>
+              <div class="hero-list__text">Делаем с нуля до полной сдачи</div>
+            </li>
+            <li class="hero-list__item">
+              <div class="hero-list__image">
+                <img src="img/hero/agreement.svg" alt="">
+              </div>
+              <div class="hero-list__text">Гарантия по договору </div>
+            </li>          
+            <li class="hero-list__item">
+              <div class="hero-list__image">
+                <img src="img/hero/tassel.svg" alt="">
+              </div>
+              <div class="hero-list__text">Сделали ремонт в 300 объектах</div>
+            </li>
+          </ul>
         <button class="button hero-list__button">Рассчитать стоимость</button> 
       </div>
       <div class="hero-image">
@@ -72,6 +105,6 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 </body>
 </html>
