Сверстана и адаптирована секция услуг

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Repair Studio</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -28,7 +28,7 @@
   </div>
 </nav>
 
-<section class="hero">
+<section class="hero hero-background">
   <div class="container">
     <div class="hero-block">
       <div class="hero-text">
@@ -66,6 +66,64 @@
   </div>
 </section>
 
+<section class="offer">
+  <div class="container">
+    <div class="offer-feature">
+      <h2 class="offer-feature__title header-title">Услуги и цены</h2>
+      <p class="offer-feature__subtitle">Чаще всего, чтобы рассчитать стоимость ремонта нужен точный замер помещения, но вы можете ориентироваться на цены, указанные на сайте</p>
+    </div>
+    <div class="offer-block">
+      <div class="offer-blocks">
+        <div class="offer-block__img">
+          <img src="img/offer/kosmeticheskij-remont.jpg" alt="Косметический ремонт">
+        </div>
+        <div class="offer-block__description">
+          <div class="offer-block__title">Косметический ремонт</div>
+          <div class="offer-block__price">2 000 руб/м<sup>2</sup></div>
+          <div class="offer-block__subtitle">консультация специалиста <br>
+            поклейка стен обоями или покраска <br>
+            укладка покрытия на пол <br>
+            замена розеток и выключателей <br>
+            установка сантехники<br>
+            покраска потолков <br>
+            покраска труб, радиаторов </div>
+          <div class="offer-block__button button">Рассчитать стоимость</div>
+        </div>
+      </div>
+      <div class="offer-blocks">
+        <div class="offer-block__img">
+          <img src="img/offer/kapitalnyj-remont.jpg" alt="Капитальный ремонт">
+        </div>
+        <div class="offer-block__description">
+          <div class="offer-block__title">Капитальный ремонт</div>
+          <div class="offer-block__price">4 000 руб/м<sup>2</sup></div>
+          <div class="offer-block__subtitle">косметический ремонт, плюс:<br>
+            выравнивание и шпатлевка стен<br>
+            выравнивание полов <br>
+            выравнивание потолков <br>
+            разводка электропроводки <br>
+            разводка сантехнических труб<br>
+            укладка плитки в санузлах <br>          
+          </div>
+          <div class="offer-block__button button">Рассчитать стоимость</div>
+      </div>
+      </div>
+      <div class="offer-blocks">
+        <div class="offer-block__img">
+          <img src="img/offer/evropejskij-remont.jpg" alt="">
+        </div>        
+        <div class="offer-block__description">
+          <div class="offer-block__title">Европейский ремонт</div>
+          <div class="offer-block__price">6 000 руб/м<sup>2</sup></div>
+          <div class="offer-block__subtitle">капитальный ремонт, плюс: 
+            двухуровневые потолки из гипсокартона или натяжные устройство потолков в санузлах укладка паркетной доски и тд устройство теплых полов 
+            укладка плитки в санузлах</div>
+          <div class="offer-block__button button">Рассчитать стоимость</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
