Сверстан и адаптирован слайдер сайта

--- a/src/index.html
+++ b/src/index.html
@@ -66,11 +66,11 @@
   </div>
 </section>
 
-<section class="offer">
+<section class="section offer">
   <div class="container">
     <div class="offer-feature">
       <h2 class="offer-feature__title header-title">Услуги и цены</h2>
-      <p class="offer-feature__subtitle">Чаще всего, чтобы рассчитать стоимость ремонта нужен точный замер помещения, но вы можете ориентироваться на цены, указанные на сайте</p>
+      <p class="offer-feature__subtitle header-description">Чаще всего, чтобы рассчитать стоимость ремонта нужен точный замер помещения, но вы можете ориентироваться на цены, указанные на сайте</p>
     </div>
     <div class="offer-block">
       <div class="offer-blocks">
@@ -125,5 +125,105 @@
   </div>
 </section>
 
+<section class="section projects projects_bg">
+  <div class="container">
+    <div class="projects-done">
+      <div class="projects-done__title header-title">Завершенные проекты</div>
+      <div class="projects-done__subtitle header-description">Мы сделали ремонт трехсот квартир, посмотрите часть из этих проектов. Тут лишь часть, потому что иногда клиенты не дают согласие на показ их квартир в нашем портфолио. </div>
+    </div>
+    <div class="slider">
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-1.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-1.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-1.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-1.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-1.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/slick.min.js"></script>
+<!-- Скрипт слайдера -->
+<script>
+$(document).ready(function () {
+  $('.slider').slick({
+    infinite: true,
+    dots: true,
+    arrows: false,
+    slidesToShow: 1,
+    fade: true,
+    fadeSpeed: 0
+  })
+});
+</script>
 </body>
 </html>
