Сверстан блок с иконками

--- a/src/index.html
+++ b/src/index.html
@@ -210,6 +210,86 @@
     </div>
   </div>
 </section>
+<section class="section profit">
+  <div class="container">
+    <div class="profit-block">
+      <div class="profit-block__title header-title">С нами выгодно работать</div>
+      <div class="profit-block__subtitle header-description">Уверены, что вы сравниваете параллельно несколько компаний и выберите тех, кто предложит вам лучшие условия. Мы расскажем, почему вам стоит работать именно с нами.</div>
+    </div>
+    <div class="profit-features">
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/money.svg" alt="Выгодные цены"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Выгодные цены</div>
+          <div class="profit-features__subtitle">Цены на ремонт начинаются от 1500 рублей за квадратный метр</div>
+        </div>
+      </div>
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/warranty.svg" alt="Даем гарантию 5 лет"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Даем гарантию 5 лет</div>
+          <div class="profit-features__subtitle">Гарантия на ремонтные работы прописана в договоре</div>
+        </div>
+      </div>
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/mechanic.svg" alt="Опытные мастера"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Опытные мастера</div>
+          <div class="profit-features__subtitle">У нас работают люди с опытом работы от 5 лет, других не берем</div>
+        </div>
+      </div>
+    </div>
+    <div class="profit-features">
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/schedule.svg" alt="Соблюдаем сроки"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Соблюдаем сроки</div>
+          <div class="profit-features__subtitle">Платим штраф, если сдали проект невовремя по нашей вине</div>
+        </div>
+      </div>
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/cleaning-tools.svg" alt="Убираем после себя"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Убираем после себя</div>
+          <div class="profit-features__subtitle">Оставляем квартиру и подъезд чистыми после ремонта</div>
+        </div>
+      </div>
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/vanish.svg" alt="Качественные материалы"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Качественные материалы</div>
+          <div class="profit-features__subtitle">Знаем, какие материалы подойдут больше всего независимо от цены</div>
+        </div>
+      </div>
+    </div>
+    <div class="profit-features">
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/architect.svg" alt="Закрепляем инжeнера"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Закрепляем инжeнера</div>
+          <div class="profit-features__subtitle">К каждому объекту закреплен инженер, который следит за работой</div>
+        </div>
+      </div>
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/noise.svg" alt="Соблюдаем тишину"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Соблюдаем тишину</div>
+          <div class="profit-features__subtitle">Не шумим раньше 7.00 и после 22.00. Тихо работаем в обед, когда тихий час</div>
+        </div>
+      </div>      
+      
+      <div class="profit-features__icon">
+        <div class="profit-features__icons"><img src="img/profit/checklist.svg" alt="Контроль на каждом этапе"></div>
+        <div class="profit-features__description">
+          <div class="profit-features__title">Контроль на каждом этапе</div>
+          <div class="profit-features__subtitle">Вы можете следить за ремонтом через веб-камеру со смартфона через сайт</div>
+        </div>
+      </div>
+      </div>
+      
+  </div>
+  </div>
+</section>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <!-- Скрипт слайдера -->
