Сверстан и адаптирован блок с подарками и блок с отзывами

--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,6 @@
     </div>
   </div>
 </section>
-
 <section class="section projects projects_bg">
   <div class="container">
     <div class="projects-done">
@@ -285,9 +284,107 @@
           <div class="profit-features__subtitle">Вы можете следить за ремонтом через веб-камеру со смартфона через сайт</div>
         </div>
       </div>
-      </div>
-      
+      </div>      
   </div>
+  </div>
+</section>
+<section class="section gift">
+  <div class="container">
+    <div class="gift-blocks">
+    <div class="gift-block">
+      <div class="gift-block__title header-title">Получите в подарок дизайн-проект </div>
+      <div class="gift-block__subtitle header-description">Оставьте заявку, чтобы к вам мог выехать замерщик. Когда он закончит снимать мерки, он подарит вам сертификат на бесплатный дизайн-проект квартиры</div>
+      <button class="gift-block__button button">Получить подарок</button>
+    </div>
+    <div class="gift-image">
+      <img src="img/free-image.jpg" alt="" class="gift-image__img">
+    </div>
+  </div>
+  </div>
+</section>
+<section class="section projects projects_bg">
+  <div class="container">
+    <div class="projects-done">
+      <div class="projects-done__title header-title">Отзывы наших клиентов</div>
+      <div class="projects-done__subtitle header-description">Прочитайте, что пишут о нас те, кто уже заказал ремонт в нашей компании. Мы собираем отзывы не сразу после ремонта, а спустя месяц после заселения в квартиру, чтобы отзыв был честным.</div>
+    </div>
+    <div class="slider">
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-2.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-2.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-2.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-2.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+      <div class="slider__item">
+        <div class="slider__image">
+          <img src="img/project/project-image-2.jpg" alt="">
+        </div>
+        <div class="slider__feedback">
+          <h3 class="slider__title">Квартира на Адоратского</h3>
+          <div class="slider__features">Площадь: <span class="slider__features_yellow">85 кв. м.</span></div>
+          <div class="slider__features">Срок ремонта: <span class="slider__features_yellow">60 дней</span></div>
+          <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
+          <div class="slider__feedbacks">
+            <div class="slider__feedbacks-title">Отзыв клиента</div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 <script src="js/jquery-3.4.1.min.js"></script>
