исправлен баг со слайдером

--- a/src/index.html
+++ b/src/index.html
@@ -320,7 +320,7 @@
           <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
           <div class="slider__feedbacks">
             <div class="slider__feedbacks-title">Отзыв клиента</div>
-            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. </div>
           </div>
         </div>
       </div>
@@ -335,7 +335,7 @@
           <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
           <div class="slider__feedbacks">
             <div class="slider__feedbacks-title">Отзыв клиента</div>
-            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. </div>
           </div>
         </div>
       </div>
@@ -350,7 +350,7 @@
           <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
           <div class="slider__feedbacks">
             <div class="slider__feedbacks-title">Отзыв клиента</div>
-            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. </div>
           </div>
         </div>
       </div>
@@ -365,7 +365,7 @@
           <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
           <div class="slider__feedbacks">
             <div class="slider__feedbacks-title">Отзыв клиента</div>
-            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. </div>
           </div>
         </div>
       </div>
@@ -380,13 +380,15 @@
           <div class="slider__features">Цена: <span class="slider__features_yellow">650 000 рублей</span></div>
           <div class="slider__feedbacks">
             <div class="slider__feedbacks-title">Отзыв клиента</div>
-            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. Пока шел ремонт нам показывали процесс через WhatsApp, это удобно. Теперь знакомые после новоселья спрашивают, кто сделал такой прекрасный ремент. Будем вас рекомендовать! </div>
+            <div class="slider__feedbacks-subtitle">Благодарю команду “Remont” за слаженную работу. Ремонт в квартире сделали в срок, который был указан в договоре, сдали квартиру чистой, без задержек. </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
+
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <!-- Скрипт слайдера -->
