Сверстан блок на js с раскрывающимся списком

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 <section class="section offer">
   <div class="container">
     <div class="offer-feature">
-      <h2 class="offer-feature__title header-title">Услуги и цены</h2>
+      <h3 class="offer-feature__title header-title">Услуги и цены</h3>
       <p class="offer-feature__subtitle header-description">Чаще всего, чтобы рассчитать стоимость ремонта нужен точный замер помещения, но вы можете ориентироваться на цены, указанные на сайте</p>
     </div>
     <div class="offer-block">
@@ -127,7 +127,7 @@
 <section class="section projects projects_bg">
   <div class="container">
     <div class="projects-done">
-      <div class="projects-done__title header-title">Завершенные проекты</div>
+      <h3 class="projects-done__title header-title">Завершенные проекты</h3>
       <div class="projects-done__subtitle header-description">Мы сделали ремонт трехсот квартир, посмотрите часть из этих проектов. Тут лишь часть, потому что иногда клиенты не дают согласие на показ их квартир в нашем портфолио. </div>
     </div>
     <div class="slider">
@@ -212,7 +212,7 @@
 <section class="section profit">
   <div class="container">
     <div class="profit-block">
-      <div class="profit-block__title header-title">С нами выгодно работать</div>
+      <h3 class="profit-block__title header-title">С нами выгодно работать</h3>
       <div class="profit-block__subtitle header-description">Уверены, что вы сравниваете параллельно несколько компаний и выберите тех, кто предложит вам лучшие условия. Мы расскажем, почему вам стоит работать именно с нами.</div>
     </div>
     <div class="profit-features">
@@ -292,7 +292,7 @@
   <div class="container">
     <div class="gift-blocks">
     <div class="gift-block">
-      <div class="gift-block__title header-title">Получите в подарок дизайн-проект </div>
+      <h3 class="gift-block__title header-title">Получите в подарок дизайн-проект </h3>
       <div class="gift-block__subtitle header-description">Оставьте заявку, чтобы к вам мог выехать замерщик. Когда он закончит снимать мерки, он подарит вам сертификат на бесплатный дизайн-проект квартиры</div>
       <button class="gift-block__button button">Получить подарок</button>
     </div>
@@ -387,10 +387,28 @@
     </div>
   </div>
 </section>
-
-
+<section class="section">
+  <div class="container">
+    <div class="questions">
+      <div class="questions-block">
+        <h3 class="questions-block__title header-title">Частые вопросы клиентов</h3>
+        <div class="questions-block__subtitle header-description">Знаем, что на все вопросы не ответить на сайте, но возможно, мы уже знаем, о чем вы хотите спросить. Кликните на вопрос, чтобы раскрылся ответ на него.</div>
+      </div>
+    </div>
+    <div class="questions-answer open">
+      <div class="questions-answer__title">Как быстро вы сможете рассчитать стоимость ремонта?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+    </div>
+    <div class="questions-answer close">
+      <div class="questions-answer__title">Какие материалы вы используете для ремонта?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+    </div>
+  </div>
+</div>
+</section>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/main.js"></script>
 <!-- Скрипт слайдера -->
 <script>
 $(document).ready(function () {
