Сверстан и адаптирован блок с частыми вопросами клиентов

--- a/src/index.html
+++ b/src/index.html
@@ -387,7 +387,7 @@
     </div>
   </div>
 </section>
-<section class="section">
+<section class="section question question_bg">
   <div class="container">
     <div class="questions">
       <div class="questions-block">
@@ -401,6 +401,26 @@
     </div>
     <div class="questions-answer close">
       <div class="questions-answer__title">Какие материалы вы используете для ремонта?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+    </div>
+    <div class="questions-answer close">
+      <div class="questions-answer__title">У вас работают лица без гражданства РФ?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+    </div>
+    <div class="questions-answer close">
+      <div class="questions-answer__title">Есть ли у вас рассрочка на ремонт?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+    </div>
+    <div class="questions-answer close">
+      <div class="questions-answer__title">Что будет, если вы задержите срок сдачи квартиры?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+    </div>
+    <div class="questions-answer close">
+      <div class="questions-answer__title">Как долго вы будете делать дизайн-проект ремонта?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+    </div>
+    <div class="questions-answer close">
+      <div class="questions-answer__title">Можно ли посмотреть ваши текущие объекты ремонта?</div>
       <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
     </div>
   </div>
